# maybe-bool

./: README.md  pyproject.toml
src/maybe_boolean/: __init__.py
src/tests/: test1.py
